--- a/web/src/www/index.html
+++ b/web/src/www/index.html
@@ -8,38 +8,22 @@
     <meta name="description" content="Google's material design UI components built with React.">
 
     <!-- Use minimum-scale=1 to enable GPU rasterization -->
-    <meta
-        name="viewport"
-        content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1"
     >
 
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
     <link rel="shortcut icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="fonts/iconfont.css">
 </head>
-
 <body>
-<!-- This script adds the Roboto font to our project. For more detail go to this site:  http://www.google.com/fonts#UsePlace:use/Collection:Roboto:400,300,500 -->
-<!--<script>-->
-<!--var WebFontConfig = {-->
-<!--google: { families: [ 'Roboto:400,300,500:latin' ] }-->
-<!--};-->
-<!--(function() {-->
-<!--var wf = document.createElement('script');-->
-<!--wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +-->
-<!--'://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';-->
-<!--wf.type = 'text/javascript';-->
-<!--wf.async = 'true';-->
-<!--var s = document.getElementsByTagName('script')[0];-->
-<!--s.parentNode.insertBefore(wf, s);-->
-<!--})();-->
-<!--</script>-->
-<div id='app'>
-    <script src="app.js"></script>
-</div>
+
+<div id='app'></div>
 <div id="alert"></div>
 <div id="dialog"></div>
+
+<script src="app.js"></script>
+
 </body>
 
 </html>
