--- a/web/src/www/index.html
+++ b/web/src/www/index.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="fonts/iconfont.css">
 </head>
-<body>
+<body class="3fuyu-blog">
 
 <div id='app'></div>
 <div id="alert"></div>
