--- a/web/src/www/management.html
+++ b/web/src/www/management.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Material-UI</title>
-    <meta name="description" content="Google's material design UI components built with React.">
+    <title>3fuyu</title>
+    <meta name="description" content="I'm 3fuyu. I stick to less, but better.">
 
     <!-- Use minimum-scale=1 to enable GPU rasterization -->
     <meta name="viewport"
