feat(all): add icp number

--- a/web/src/www/index.html
+++ b/web/src/www/index.html
@@ -25,6 +25,7 @@
 <div id="dialog"></div>
 <div id="loading"></div>
 <div id="cloud-tie-wrapper" class="cloud-tie-wrapper"></div>
+<div id='record'></div>
 
 <script src="app.js"></script>
 
